--- a/Domino Trading.html
+++ b/Domino Trading.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href=" DominoTrading.css"/>
 		<link rel="stylesheet" href="assets/css/jquery.css" />
 		<title> Domino Trading </title>
+		<meta http-equiv="X-UA-Compstible" content="ie-edge">
 	</head>
 	
 	<body class="landing">
