--- a/Foire aux questions.html
+++ b/Foire aux questions.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="assets/css/jquery.css" />
 		<title> Foire aux questions-Alpha Trading School </title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<meta http-equiv="X-UA-Compstible" content="ie-edge">
 	</head>
 	<body class="landing">
 
