--- a/Domino Trading.html
+++ b/Domino Trading.html
@@ -2,11 +2,11 @@
 <html>
 	<head> 
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, user-scalable=yes"/>
 		<link rel="stylesheet" href=" DominoTrading.css"/>
 		<link rel="stylesheet" href="assets/css/jquery.css" />
+		<link rel="stylesheet" href=" responsive.css"/>
 		<title> Domino Trading </title>
-		<meta http-equiv="X-UA-Compstible" content="ie-edge">
 	</head>
 	
 	<body class="landing">
