Update Foire aux questions.html

--- a/Foire aux questions.html
+++ b/Foire aux questions.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="DominoTrading.css"/>
 		<link rel="stylesheet" href="assets/css/jquery.css" />
+		<link rel="stylesheet" href=" responsive.css"/>
 		<title> Foire aux questions-Alpha Trading School </title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 		<meta http-equiv="X-UA-Compstible" content="ie-edge">
